# splash

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
itm/: Cargo.toml  LICENSE
itm/src/: climate.rs  lib.rs
src/: itm.rs  lib.rs  main.rs
src/itm/: mod.rs  utils.rs
