[package]
name = "splash"
edition = "2018"
version = "0.1.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
description = "RF Signal Propagation analysis tool: like SPLAT! but more flexible"
license = "CC-BY-NC-SA-4.0"

[dependencies]
gdal = "0.5.0"
geo = "0.12.2"
num-complex = "0.2.3"
itm = { path = "./itm", package = "splash-longleyrice" }

[workspace]
members = ["itm"]
